--- a/schemas/settings.json
+++ b/schemas/settings.json
@@ -6,7 +6,7 @@
 	"required": ["cors", "server", "logger"],
 	"properties": {
 		"cors": {"$ref": "https://raw.githubusercontent.com/Codecontrol-Oy/node-gateway/master/schemas/cors.json"},
-        "server": {"$ref": "https://raw.githubusercontent.com/Codecontrol-Oy/node-gateway/master/schemas/server.son"},
+        "server": {"$ref": "https://raw.githubusercontent.com/Codecontrol-Oy/node-gateway/master/schemas/server.json"},
         "logger": {"$ref": "https://raw.githubusercontent.com/Codecontrol-Oy/node-gateway/master/schemas/logger.json"}
 	}
 }
