--- a/schemas/config.json
+++ b/schemas/config.json
@@ -1,21 +1,11 @@
 {
-	"id": "https://raw.githubusercontent.com/Codecontrol-Oy/node-gateway/master/schemas/configSchema.json",
+	"id": "https://raw.githubusercontent.com/Codecontrol-Oy/node-gateway/master/schemas/config.json",
 	"title": "node-gateway-config",
 	"type": "object",
     "$schema": "http://json-schema.org/draft-07/schema#",
-    "required": ["settings", "routerules"],
+    "required": ["settings", "routeRules"],
 	"properties": {
-		"port": {
-            "type": "integer",
-			"description": "Server Listen port"
-		},
-		"noRouteMatchesErrorMessage": {
-			"type": "string",
-			"description": "Error message when the gateway call doesn't match any defined route"
-		},
-		"generalErrorMessage": {
-			"type": "string",
-			"description": "General error message"
-		}
+		"settings": {"$ref": "https://raw.githubusercontent.com/Codecontrol-Oy/node-gateway/master/schemas/settings.json"},
+		"routeRules": {"$ref": "https://raw.githubusercontent.com/Codecontrol-Oy/node-gateway/master/schemas/routeRules.json"}
 	}
 }
