--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@codecontrol/node-gateway",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "A Simple NodeJS based proxy gateway",
-  "keywors": ["gateway", "proxy", "api gateway", "docker", "endpoint"],
+  "keywords": ["gateway", "proxy", "api gateway", "docker", "endpoint"],
   "repository": {
     "type": "git",
     "url": "https://github.com/Codecontrol-Oy/node-gateway"
