--- a/.github/workflows/node-ci.js.yml
+++ b/.github/workflows/node-ci.js.yml
@@ -12,7 +12,8 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x, 12.x, 14.x]
-        include:os: [macos-latest, ubuntu-latest, ubuntu-latest]
+        include:
+          os: [macos-latest, ubuntu-latest, ubuntu-latest]
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
