--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "http-proxy": "^1.18.1",
     "http-proxy-rules": "^1.1.3",
     "jsonschema": "^1.2.6",
-    "log4js": "^6.3.0",
-    "node-http-proxy": "^0.2.3"
+    "log4js": "^6.3.0"
   }
 }
