Support for web socket forwarding Fixes #15

--- a/config/settings.json
+++ b/config/settings.json
@@ -9,6 +9,7 @@
         "server": {
             "port": 6010, 
             "noRouteMatchesErrorMessage": "No route matches the given address",
+            "noWebsocketRouteMatchesErrorMessage": "No websocket route matches the given address",
             "generalErrorMessage": "node-gateway general error",
             "host": "127.0.0.1",
             "serviceName": "node-gateway"
