updated jasmine reporting

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "<rootDir>/jasmine.js"
     ],
     "coverageDirectory": "report",
+    "testRunner": "jasmine2",
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "/containers/",
@@ -40,8 +41,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "jasmine-reporters": "^2.3.2",
-    "jest": "^26.4.2",
+    "jasmine": "^4.0.2",
+    "jasmine-reporters": "^2.5.0",
+    "jest": "^27.4.7",
     "nock": "^13.0.4",
     "rimraf": "^3.0.2",
     "sinon": "^9.0.3",
