fix invalid log4js level settings

--- a/config/settings.json
+++ b/config/settings.json
@@ -26,11 +26,10 @@
                         "appenders": [
                             "node-gateway"
                         ],
-                        "level": "info"
+                        "level": "ALL"
                     }
                 }
-            },
-            "loglevel": "DEBUG"
+            }
         }
     }
 }
