--- a/deploy/gateway-deployment.yaml
+++ b/deploy/gateway-deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - image: codecontrol/node-gateway:dev
-        name: node-gateway
+        name: node-gatewaygit pu
         ports:
         - containerPort: 6010
